--- a/IPYNB NoteBooks/EDA.ipynb
+++ b/IPYNB NoteBooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4   39727  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "4   39727  2024      3   20    17       9       8   Wednesday            12  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "4  2024      3   20     7       1      36   Wednesday            12  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "4   39729  2024      3   13    16      39       9   Wednesday            11  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -827,6 +827,48 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>True</td>\n",
+       "      <td>2862</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Dark Phenex</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:40:40</td>\n",
+       "      <td>Adamantoise</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Grade 8 Tincture of Dexterity</td>\n",
+       "      <td>39728</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2862</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Dark Phenex</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:40:37</td>\n",
+       "      <td>Adamantoise</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Grade 8 Tincture of Dexterity</td>\n",
+       "      <td>39728</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>40</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
        "      <td>2863</td>\n",
        "      <td>51</td>\n",
        "      <td>Lune Cr'est</td>\n",
@@ -846,7 +888,7 @@
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>True</td>\n",
        "      <td>2500</td>\n",
        "      <td>33</td>\n",
@@ -867,7 +909,7 @@
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>True</td>\n",
        "      <td>2961</td>\n",
        "      <td>99</td>\n",
@@ -887,76 +929,34 @@
        "      <td>Wednesday</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>99</td>\n",
-       "      <td>Reina Kata</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-03-20 15:15:45</td>\n",
-       "      <td>Gilgamesh</td>\n",
-       "      <td>63</td>\n",
-       "      <td>Grade 8 Tincture of Dexterity</td>\n",
-       "      <td>39728</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>2984</td>\n",
-       "      <td>99</td>\n",
-       "      <td>Arturo Brikoa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-03-20 14:58:57</td>\n",
-       "      <td>Faerie</td>\n",
-       "      <td>54</td>\n",
-       "      <td>Grade 8 Tincture of Dexterity</td>\n",
-       "      <td>39728</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>14</td>\n",
-       "      <td>58</td>\n",
-       "      <td>57</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     hq  pricePerUnit  quantity      buyerName  onMannequin  \\\n",
-       "0  True          2863        51    Lune Cr'est        False   \n",
-       "1  True          2500        33    Dong Senpai        False   \n",
-       "2  True          2961        99  Shadow Erebus        False   \n",
-       "3  True          2500        99     Reina Kata        False   \n",
-       "4  True          2984        99  Arturo Brikoa        False   \n",
+       "0  True          2862        33    Dark Phenex        False   \n",
+       "1  True          2862        33    Dark Phenex        False   \n",
+       "2  True          2863        51    Lune Cr'est        False   \n",
+       "3  True          2500        33    Dong Senpai        False   \n",
+       "4  True          2961        99  Shadow Erebus        False   \n",
        "\n",
        "            timestamp    worldName  worldID                           Name  \\\n",
-       "0 2024-03-20 16:39:34  Adamantoise       73  Grade 8 Tincture of Dexterity   \n",
-       "1 2024-03-20 16:09:17    Gilgamesh       63  Grade 8 Tincture of Dexterity   \n",
-       "2 2024-03-20 15:53:35        Siren       57  Grade 8 Tincture of Dexterity   \n",
-       "3 2024-03-20 15:15:45    Gilgamesh       63  Grade 8 Tincture of Dexterity   \n",
-       "4 2024-03-20 14:58:57       Faerie       54  Grade 8 Tincture of Dexterity   \n",
+       "0 2024-03-20 17:40:40  Adamantoise       73  Grade 8 Tincture of Dexterity   \n",
+       "1 2024-03-20 17:40:37  Adamantoise       73  Grade 8 Tincture of Dexterity   \n",
+       "2 2024-03-20 16:39:34  Adamantoise       73  Grade 8 Tincture of Dexterity   \n",
+       "3 2024-03-20 16:09:17    Gilgamesh       63  Grade 8 Tincture of Dexterity   \n",
+       "4 2024-03-20 15:53:35        Siren       57  Grade 8 Tincture of Dexterity   \n",
        "\n",
        "   itemID  year  month  day  hour  minute  second day_of_week  week_of_year  \n",
-       "0   39728  2024      3   20    16      39      34   Wednesday            12  \n",
-       "1   39728  2024      3   20    16       9      17   Wednesday            12  \n",
-       "2   39728  2024      3   20    15      53      35   Wednesday            12  \n",
-       "3   39728  2024      3   20    15      15      45   Wednesday            12  \n",
-       "4   39728  2024      3   20    14      58      57   Wednesday            12  "
+       "0   39728  2024      3   20    17      40      40   Wednesday            12  \n",
+       "1   39728  2024      3   20    17      40      37   Wednesday            12  \n",
+       "2   39728  2024      3   20    16      39      34   Wednesday            12  \n",
+       "3   39728  2024      3   20    16       9      17   Wednesday            12  \n",
+       "4   39728  2024      3   20    15      53      35   Wednesday            12  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "4       8   Wednesday            12  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
