--- a/IPYNB NoteBooks/EDA.ipynb
+++ b/IPYNB NoteBooks/EDA.ipynb
@@ -67,6 +67,14 @@
        "      <th>worldID</th>\n",
        "      <th>Name</th>\n",
        "      <th>itemID</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>second</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>week_of_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -82,6 +90,14 @@
        "      <td>54</td>\n",
        "      <td>Grade 8 Tincture of Strength</td>\n",
        "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -95,6 +111,14 @@
        "      <td>63</td>\n",
        "      <td>Grade 8 Tincture of Strength</td>\n",
        "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -108,6 +132,14 @@
        "      <td>63</td>\n",
        "      <td>Grade 8 Tincture of Strength</td>\n",
        "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -121,6 +153,14 @@
        "      <td>63</td>\n",
        "      <td>Grade 8 Tincture of Strength</td>\n",
        "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -134,6 +174,14 @@
        "      <td>63</td>\n",
        "      <td>Grade 8 Tincture of Strength</td>\n",
        "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -154,12 +202,12 @@
        "3  2024-03-20 17:27:52  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
        "4  2024-03-20 17:11:23  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
        "\n",
-       "   itemID  \n",
-       "0   39727  \n",
-       "1   39727  \n",
-       "2   39727  \n",
-       "3   39727  \n",
-       "4   39727  "
+       "   itemID  year  month  day  hour  minute  second day_of_week  week_of_year  \n",
+       "0   39727  2024      3   20    17      28      45   Wednesday            12  \n",
+       "1   39727  2024      3   20    17      27      55   Wednesday            12  \n",
+       "2   39727  2024      3   20    17      27      53   Wednesday            12  \n",
+       "3   39727  2024      3   20    17      27      52   Wednesday            12  \n",
+       "4   39727  2024      3   20    17      11      23   Wednesday            12  "
       ]
      },
      "execution_count": 3,
@@ -1186,6 +1234,238 @@
     "intelligence_tincture_market.to_csv(\"..\\\\data\\\\intelligence_tincture_market.csv\", index=False)\n",
     "\n",
     "intelligence_tincture_market.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hq</th>\n",
+       "      <th>pricePerUnit</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>buyerName</th>\n",
+       "      <th>onMannequin</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>worldName</th>\n",
+       "      <th>worldID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>itemID</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>second</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>week_of_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2989</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Edit Undeux</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:28:45</td>\n",
+       "      <td>Faerie</td>\n",
+       "      <td>54</td>\n",
+       "      <td>Grade 8 Tincture of Strength</td>\n",
+       "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2714</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Mythological Dream</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:27:55</td>\n",
+       "      <td>Gilgamesh</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Grade 8 Tincture of Strength</td>\n",
+       "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2714</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Mythological Dream</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:27:53</td>\n",
+       "      <td>Gilgamesh</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Grade 8 Tincture of Strength</td>\n",
+       "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2714</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Mythological Dream</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:27:52</td>\n",
+       "      <td>Gilgamesh</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Grade 8 Tincture of Strength</td>\n",
+       "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Bib Kek</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:11:23</td>\n",
+       "      <td>Gilgamesh</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Grade 8 Tincture of Strength</td>\n",
+       "      <td>39727</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     hq  pricePerUnit  quantity           buyerName  onMannequin  \\\n",
+       "0  True          2989        47         Edit Undeux        False   \n",
+       "1  True          2714        99  Mythological Dream        False   \n",
+       "2  True          2714        99  Mythological Dream        False   \n",
+       "3  True          2714        99  Mythological Dream        False   \n",
+       "4  True          2700        99             Bib Kek        False   \n",
+       "\n",
+       "            timestamp  worldName  worldID                          Name  \\\n",
+       "0 2024-03-20 17:28:45     Faerie       54  Grade 8 Tincture of Strength   \n",
+       "1 2024-03-20 17:27:55  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
+       "2 2024-03-20 17:27:53  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
+       "3 2024-03-20 17:27:52  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
+       "4 2024-03-20 17:11:23  Gilgamesh       63  Grade 8 Tincture of Strength   \n",
+       "\n",
+       "   itemID  year  month  day  hour  minute  second day_of_week  week_of_year  \n",
+       "0   39727  2024      3   20    17      28      45   Wednesday            12  \n",
+       "1   39727  2024      3   20    17      27      55   Wednesday            12  \n",
+       "2   39727  2024      3   20    17      27      53   Wednesday            12  \n",
+       "3   39727  2024      3   20    17      27      52   Wednesday            12  \n",
+       "4   39727  2024      3   20    17      11      23   Wednesday            12  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# since the columns are the same for all the dataframes, we can combine them into one dataframe\n",
+    "combined_tincture_market = pd.concat([strength_tincture_market, mind_tincture_market, vitality_tincture_market, dexterity_tincture_market, intelligence_tincture_market], ignore_index=True)\n",
+    "combined_tincture_market.to_csv(\"..\\\\data\\\\combined_tincture_market.csv\", index=False)\n",
+    "combined_tincture_market.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 390269 entries, 0 to 390268\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column        Non-Null Count   Dtype         \n",
+      "---  ------        --------------   -----         \n",
+      " 0   hq            390269 non-null  bool          \n",
+      " 1   pricePerUnit  390269 non-null  int64         \n",
+      " 2   quantity      390269 non-null  int64         \n",
+      " 3   buyerName     390269 non-null  object        \n",
+      " 4   onMannequin   390269 non-null  bool          \n",
+      " 5   timestamp     390269 non-null  datetime64[ns]\n",
+      " 6   worldName     390269 non-null  object        \n",
+      " 7   worldID       390269 non-null  int64         \n",
+      " 8   Name          390269 non-null  object        \n",
+      " 9   itemID        390269 non-null  int64         \n",
+      " 10  year          390269 non-null  int32         \n",
+      " 11  month         390269 non-null  int32         \n",
+      " 12  day           390269 non-null  int32         \n",
+      " 13  hour          390269 non-null  int32         \n",
+      " 14  minute        390269 non-null  int32         \n",
+      " 15  second        390269 non-null  int32         \n",
+      " 16  day_of_week   390269 non-null  object        \n",
+      " 17  week_of_year  390269 non-null  UInt32        \n",
+      "dtypes: UInt32(1), bool(2), datetime64[ns](1), int32(6), int64(4), object(4)\n",
+      "memory usage: 38.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_tincture_market.info()\n"
    ]
   },
   {
